cluster/redcloud/apps/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: server
  ports:
    - name: http
      port: 2283
      targetPort: 2283

---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: 3003
