cluster/redcloud/apps/immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: traefik.mesh.rigsb.net
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`immich.mesh.rigsb.net`)
      kind: Rule
      services:
        - name: immich-server
          port: 2283
      middlewares:
        - name: security-headers
          namespace: traefik
  tls:
    secretName: immich-mesh-rigsb-net-tls
